# colosseum-near-rt-ric

./: .gitignore  Dockerfile  README.md  build-ns-o-ran.sh
setup-scripts/: import-base-images.sh  import-wines-images.sh  setup-e2term.sh  setup-lib.sh  setup-ric-bronze.sh  setup-ric.sh  setup-sample-xapp.sh  start-ric-arena.sh  start-xapp-ns-o-ran.sh  start-xapp.sh
setup/dbaas/: .gitattributes  .gitignore  .gitreview  .readthedocs.yaml  INFO.yaml  LICENSES.txt  README.md  container-tag.yaml  tox.ini
setup/dbaas/docker/: Dockerfile.redis  Dockerfile.testapp
setup/dbaas/docs/: conf.py  conf.yaml  index.rst  overview.rst  release-notes.rst
setup/dbaas/redismodule/: Makefile.am  README.md  configure.ac
setup/dbaas/redismodule/include/: redismodule.h
setup/dbaas/redismodule/src/: exstrings.c
setup/dbaas/redismodule/tst/include/: ut_helpers.hpp
setup/dbaas/redismodule/tst/mock/include/: commonStub.h  exstringsStub.h  redismodule.h
setup/dbaas/redismodule/tst/mock/src/: commonStub.cpp  redismoduleNewStub.cpp  redismoduleStub.cpp
setup/dbaas/redismodule/tst/src/: exstrings_ndel_test.cpp  exstrings_nget_test.cpp  exstrings_test.cpp  main.cpp  ut_helpers.cpp
setup/dbaas/releases/: container-release-ric-plt-dbaas-0.1.0.yaml  container-release-ric-plt-dbaas.yaml
setup/e2/: .gitignore  .gitreview  INFO.yaml  LICENSES.txt  tox.ini
setup/e2/RIC-E2-TERMINATION/: BuildRunName.h  BuildXml.h  CMakeLists.txt  Dockerfile  Makefile  ReadConfigFile.h  base64.cpp  base64.h  container-tag.yaml  dockerRouter.txt  mapWrapper.h  openTracing.h  router.txt  sctpThread.cpp  sctpThread.h  startup.sh  statCollector.h
setup/e2/RIC-E2-TERMINATION/TEST/: e2sm.h  e2test.cpp  logInit.h
setup/e2/RIC-E2-TERMINATION/TEST/ASN_LOG/: LogTest.h
setup/e2/RIC-E2-TERMINATION/TEST/T1/: Dockerfile  E2Builder.h  E2Setup.cpp  Test1.cpp  dockerRouter.txt
setup/e2/RIC-E2-TERMINATION/TEST/base64/: testBase64.cpp
setup/e2/RIC-E2-TERMINATION/TEST/e2smTest/: e2smtest.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/: e2sm.c  e2test.h
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/ASN_LOG/: LogTest.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/ConfigurationFileTest/: testConfigFile.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/T2/: SubscriptionTest.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/base64/: testBase64.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/httpServer/: HttpServer.cpp  HttpServer.h
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/rmrClient/: rmrClient.h
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/sctpClient/: sctpClient.cpp  sctpClient.h  sctpClientTest.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/setUpMessages/: SetUpMessages.cpp
setup/e2/RIC-E2-TERMINATION/TEST/testAsn/testAsn/: testAsn.cpp
setup/e2/RIC-E2-TERMINATION/config/: config.conf
setup/e2/config/: config.bad  config.sec  config.secbad
setup/e2/docs/: conf.yaml  index.rst  overview.rst  release-notes.rst
setup/e2/releases/: container-release-ric-plt-e2.yaml
setup/e2mgr/: .gitignore  INFO.yaml
setup/e2mgr/Automation/: Dockerfile  run_tests.sh
setup/e2mgr/E2Manager/: Dockerfile  build-e2mgr-ubuntu.sh  container-tag.yaml  e2mgr-sonar-scanner.properties  go.mod  go.sum  kube_config.yml  router.txt
setup/e2mgr/Swagger/: E2M_API_2020-04-23.yaml
setup/e2mgr/docs/: conf.py  conf.yaml  index.rst  overview.rst  release-notes.rst
setup/e2mgr/releases/: container-release-ric-plt-e2mgr.yaml
setup/sample-xapp/: Dockerfile  run_xapp.py  run_xapp.sh  xapp_control.py
setup/xapp-bs-connector/: INFO.yaml  build_xapp.sh  container-tag.yaml  external_socket_tester.py  run_xapp.sh
setup/xapp-bs-connector/asn1c_defs/: Cause.h  CauseMisc.c  CauseProtocol.h  CauseRICservice.h  CauseTransport.c  CauseTransport.h  Criticality.c  CriticalityDiagnostics-IE-Item.h  CriticalityDiagnostics.h  E2AP-PDU.c  E2SM-HelloWorld-ActionDefinition-Format1.c  E2SM-HelloWorld-ActionDefinition-Format1.h  E2SM-HelloWorld-ControlHeader-Format1.h  E2SM-HelloWorld-ControlMessage-Format1.h  E2SM-HelloWorld-ControlMessage.h  E2SM-HelloWorld-IndicationHeader.c  E2SM-HelloWorld-IndicationHeader.h  E2SM-HelloWorld-IndicationMessage-Format1.c  E2SM-HelloWorld-IndicationMessage.h  E2setupFailure.h  E2setupRequest.c  E2setupRequest.h  E2setupResponse.h  ENB-ID-Choice.h  ENB-ID.h  ENGNB-ID.c  ENGNB-ID.h  ErrorIndication.h  GNB-DU-ID.h  GNB-ID-Choice.c  GNB-ID-Choice.h  GlobalE2node-en-gNB-ID.c  GlobalE2node-en-gNB-ID.h  GlobalE2node-gNB-ID.h  GlobalE2node-ng-eNB-ID.h  GlobalRIC-ID.h  GlobalenGNB-ID.c  GlobalenGNB-ID.h  GlobalgNB-ID.h  HW-ControlCommand.h  (+64 more)
setup/xapp-bs-connector/docs/: conf.yaml  e2sm-HelloWorld-v001.asn  overview.rst  requirements-docs.txt  user-guide.rst
setup/xapp-bs-connector/init/: init_script.py  routes.txt
setup/xapp-bs-connector/schemas/: hwxapp-policy.json
setup/xapp-bs-connector/src/: README  agent_connector.cc  run_xapp.sh  xapp.cc  xapp_env.sh
setup/xapp-bs-connector/test/: Makefile  test_db.h  test_hc.h
setup/xapp-sm-connector/: .gitignore  .readthedocs.yaml  README  build_xapp.sh  rmr-version.yaml  run_xapp.sh  tox.ini
setup/xapp-sm-connector/asn1c_defs/: ARP.c  ARP.h  CMakeLists.txt  CSI-RS-Index.c  CSI-RS-Index.h  CUUPMeasurement-Container.c  CUUPMeasurement-Container.h  Cause.c  Cause.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRIC.c  CauseRIC.h  CauseRICservice.c  CauseRICservice.h  CauseTransport.c  CauseTransport.h  Cell-Measurement-Object-Item.c  Cell-Measurement-Object-Item.h  CellGlobalID.c  CellGlobalID.h  CellObjectID.c  CellObjectID.h  CellResourceReportListItem.c  CellResourceReportListItem.h  Criticality.c  Criticality.h  CriticalityDiagnostics-IE-Item.c  CriticalityDiagnostics-IE-Item.h  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics-IE-List.h  CriticalityDiagnostics.c  CriticalityDiagnostics.h  E2AP-PDU.c  E2AP-PDU.h  E2SM-HelloWorld-ActionDefinition.c  E2SM-HelloWorld-ActionDefinition.h  E2SM-HelloWorld-ControlHeader-Format1.c  (+472 more)
setup/xapp-sm-connector/docs/: conf.py  index.rst  installation-guide.rst  release-notes.rst
setup/xapp-sm-connector/init/: config-file.json  (+1 more)
(+398 files in other folders)
